<resources>
    <string name="app_name">Asclepius</string>
    <string name="title_home">Analyze</string>
    <string name="title_history">History</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Result</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="history">Prediction History</string>
    <string name="image_uri">Image</string>
    <string name="confidence_score">Confidence Score</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="news">Cancer News</string>
    <string name="ur_news">Here\'s some news about cancer</string>
    <string name="empty_list">Prediction history is empty</string>
    <string name="clear">Clear history</string>
</resources>