<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.asclepius.view.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.asclepius.view.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" >
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.dicoding.asclepius.view.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" >
    </fragment>

</navigation>